# XcasWonder

./: settings.gradle
app/src/main/cpp/: CMakeLists.txt  equation.cpp  equation.h  main.cpp  prettyprint.cpp  prettyprint.h  vaca.cpp
app/src/main/cpp/cairo/: autogen.sh
app/src/main/cpp/cairo/boilerplate/: cairo-boilerplate-beos.cpp  cairo-boilerplate-cogl.c  cairo-boilerplate-directfb.c  cairo-boilerplate-drm.c  cairo-boilerplate-egl.c  cairo-boilerplate-getopt.c  cairo-boilerplate-getopt.h  cairo-boilerplate-glx.c  cairo-boilerplate-pdf.c  cairo-boilerplate-private.h  cairo-boilerplate-ps.c  cairo-boilerplate-qt.cpp  cairo-boilerplate-quartz.c  cairo-boilerplate-scaled-font.h  cairo-boilerplate-script.c  cairo-boilerplate-skia.c  cairo-boilerplate-svg.c  cairo-boilerplate-system.c  cairo-boilerplate-system.h  cairo-boilerplate-test-surfaces.c  cairo-boilerplate-vg.c  cairo-boilerplate-wgl.c  cairo-boilerplate-win32-printing.c  cairo-boilerplate-win32.c  cairo-boilerplate-xcb.c  cairo-boilerplate-xlib.c  cairo-boilerplate-xlib.h  cairo-boilerplate.c  cairo-boilerplate.h  check-link.c  make-cairo-boilerplate-constructors.sh
app/src/main/cpp/cairo/doc/public/: cairo-docs.xml  check-doc-coverage.sh  check-doc-syntax.sh  language-bindings.xml
app/src/main/cpp/cairo/perf/: cairo-analyse-trace.c  cairo-perf-chart.c  cairo-perf-compare-backends.c  cairo-perf-diff  cairo-perf-diff-files.c  cairo-perf-graph  cairo-perf-graph-files.c  cairo-perf-graph-widget.c  cairo-perf-graph.h  cairo-perf-micro.c  cairo-perf-print.c  cairo-perf-report.c  cairo-perf-trace.c  cairo-perf.c  cairo-perf.h  cairo-stats.c  cairo-stats.h  dirent-win32.h
app/src/main/cpp/cairo/perf/micro/: a1-curve.c  a1-line.c  box-outline.c  cairo-perf-cover.c  composite-checker.c  curve.c  disjoint.c  dragon.c  fill-clip.c  fill.c  glyphs.c  hash-table.c  hatching.c  intersections.c  line.c  long-dashed-lines.c  long-lines.c  many-curves.c  many-fills.c  many-strokes.c  mask.c  mosaic.c  mosaic.h  paint-with-alpha.c  paint.c  pattern_create_radial.c  pixel.c  pythagoras-tree.c  rectangles.c  rounded-rectangles.c  sierpinski.c  spiral.c  stroke.c  subimage_copy.c  tessellate.c  text.c  tiger.c  twin.c  unaligned-clip.c  wave.c  (+6 more)
app/src/main/cpp/cairo/src/: cairo-analysis-surface-private.h  cairo-analysis-surface.c  cairo-arc.c  cairo-array-private.h  cairo-array.c  cairo-atomic-private.h  cairo-atomic.c  cairo-backend-private.h  cairo-base64-stream.c  cairo-base85-stream.c  cairo-bentley-ottmann-rectangular.c  cairo-bentley-ottmann-rectilinear.c  cairo-bentley-ottmann.c  cairo-beos-surface.cpp  cairo-beos.h  cairo-botor-scan-converter.c  cairo-box-inline.h  cairo-boxes-intersect.c  cairo-boxes-private.h  cairo-boxes.c  cairo-cache-private.h  cairo-cache.c  cairo-cff-subset.c  cairo-clip-boxes.c  cairo-clip-inline.h  cairo-clip-polygon.c  cairo-clip-region.c  cairo-clip-surface.c  cairo-clip-tor-scan-converter.c  cairo-clip.c  cairo-color.c  cairo-compiler-private.h  cairo-composite-rectangles.c  cairo-compositor-private.h  cairo-compositor.c  cairo-contour.c  cairo-damage-private.h  cairo-damage.c  cairo-debug.c  cairo-default-context.c  (+163 more)
app/src/main/cpp/cairo/src/drm/: cairo-drm-bo.c  cairo-drm-gallium-surface.c  cairo-drm-i915-glyphs.c  cairo-drm-intel.c  (+27 more)
app/src/main/cpp/cairo/util/: backtrace-symbols.c  cairo-api-update  font-view.c  malloc-stats.c  show-contour.c  show-edges.c  show-events.c  show-polygon.c  show-traps.c  trace-to-xml.c  xml-to-trace.c  xr2cairo
app/src/main/cpp/cpp-base64/: base64.cpp  test.cpp
app/src/main/cpp/giac/: cocoa.cc  luabridge.cc  solve.cc  threaded.h
app/src/main/cpp/libpng/: png.c  png.h  pngconf.h  pngerror.c  pngget.c  pnginfo.h  pngmem.c  pngpread.c  pngpriv.h  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngstruct.h  pngtest.c  pngtrans.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
app/src/main/cpp/pixman/: autogen.sh
app/src/main/cpp/pixman/demos/: alpha-test.c  checkerboard.c  clip-in.c  clip-test.c  composite-test.c  convolution-test.c  gradient-test.c  gtk-utils.c  gtk-utils.h  parrot.c  quad2quad.c  radial-test.c  screen-test.c  trap-test.c  tri-test.c
app/src/main/cpp/pixman/pixman/: loongson-mmintrin.h  pixman-access.c  pixman-arm-common.h  pixman-arm-neon-asm.h  pixman-arm-neon.c  pixman-arm-simd.c  pixman-bits-image.c  pixman-combine.c.template  pixman-combine.h.template  pixman-compiler.h  pixman-conical-gradient.c  pixman-cpu.c  pixman-edge-imp.h  pixman-edge.c  pixman-elf-fix.h  pixman-fast-path.c  pixman-general.c  pixman-gradient-walker.c  pixman-image.c  pixman-implementation.c  pixman-inlines.h  pixman-linear-gradient.c  pixman-matrix.c  pixman-mips-dspr2-asm.h  pixman-mips-dspr2.c  pixman-mips-dspr2.h  pixman-mmx.c  pixman-noop.c  pixman-private.h  pixman-radial-gradient.c  pixman-region.c  pixman-region16.c  pixman-region32.c  pixman-solid-fill.c  pixman-sse2.c  pixman-timer.c  pixman-trap.c  pixman-utils.c  pixman-version.h.in  pixman-vmx.c  (+3 more)
app/src/main/cpp/pixman/test/: a1-trap-test.c  affine-test.c  alpha-loop.c  alphamap.c  blitters-test.c  composite-traps-test.c  composite.c  fetch-test.c  gradient-crash-test.c  lowlevel-blt-bench.c  oob-test.c  pdf-op-test.c  region-contains-test.c  region-test.c  region-translate-test.c  scaling-crash-test.c  scaling-helpers-test.c  scaling-test.c  stress-test.c  trap-crasher.c  utils.c  utils.h
app/src/main/cpp/tommath/: bn_error.c  bn_fast_mp_invmod.c  bn_fast_mp_montgomery_reduce.c  bn_fast_s_mp_mul_digs.c  bn_fast_s_mp_mul_high_digs.c  bn_fast_s_mp_sqr.c  bn_mp_2expt.c  bn_mp_abs.c  bn_mp_add.c  bn_mp_add_d.c  bn_mp_addmod.c  bn_mp_and.c  bn_mp_clamp.c  bn_mp_clear.c  bn_mp_clear_multi.c  bn_mp_cmp.c  bn_mp_cmp_d.c  bn_mp_cmp_mag.c  bn_mp_cnt_lsb.c  bn_mp_copy.c  bn_mp_count_bits.c  bn_mp_div.c  bn_mp_div_2.c  bn_mp_div_2d.c  bn_mp_div_3.c  bn_mp_div_d.c  bn_mp_dr_is_modulus.c  bn_mp_dr_reduce.c  bn_mp_dr_setup.c  bn_mp_exch.c  bn_mp_expt_d.c  bn_mp_exptmod.c  bn_mp_exptmod_fast.c  bn_mp_exteuclid.c  bn_mp_fread.c  bn_mp_fwrite.c  bn_mp_gcd.c  bn_mp_get_int.c  bn_mp_grow.c  bn_mp_init.c  (+82 more)
(+232 files in other folders)
